Fix divider line visibility issue
- Decreased the lightness value by 5% to make the color noticable on the background
- Added overflow: visible; to <hr> to reveal the slash symbol

Refs #40, #57

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -654,8 +654,8 @@ body {
     margin-left: -10px;
     width: 1px;
     height: 30px;
-    background: color(var(--color-border) l(+10%));
-    box-shadow: #fff 0 0 0 5px;
+    background: color(var(--color-border) l(+5%));
+    box-shadow: var(--color-bg) 0 0 0 5px;
     transform: rotate(45deg);
 }
 
